2007-08-01  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/NotificationManager.cs: removed VideoDown event
	* Banter/ChatType.cs: added calltype
	* Banter/ConversationManager.cs: work to support audio only support
	* Banter/ChatWindow.cs: support new events ex. Hangup
	* Banter/Conversation.cs: work to support audio only support, removed
	  some unecessary events

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/NotificationManager.cs: Added method to notify
	* Banter/ChatWindow.cs: Chat window now notifies of a text message if
	  it doesn't have the focus

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/Makefile.am, data/images/mic.png, Banter/Makefile.am:
	  Added Mic graphic for audio calls
	* Banter/PersonCard.cs: Added Mic graphic for audio calls and ability
	  to make an audio only call

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindowManager.cs: added code to hide all chat windows
	* Banter/Application.cs: Modified the quit code to give the appearance
	  of quickly shutting down

2007-07-31  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/NotificationManager.cs: added notification for audio chat only

2007-07-31  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/ConversationManager.cs: fixes for bi-directional text chat
	  startup
	* Banter/Conversation.cs: small fixes to support bidirectional text
	  chat startup

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/Person.cs: Fixed the initial status setting
	* Banter/GroupWindow.cs: Updated to show the avatar

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/ChatWindow.cs: Removed the show contact details button...
	  there is none to show

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac, Banter/NotificationManager.cs, Banter/PersonGroup.cs,
	  Banter/ChatWindowManager.cs, Banter/Person.cs,
	  Banter/ChatWindow.cs, Banter/AvatarManager.cs,
	  Banter/GroupWindow.cs, Banter/PersonManager.cs,