@@ -1,3 +1,10 @@
+2007-08-01  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/PersonCard.cs: Updated card to allow blank cards to be created
+	  and set the Person later
+	* Banter/PersonManager.cs: Added sorting to model
+	* Banter/PersonView.cs: added updated model
+
 2007-08-01  Brady Anderson <brady.anderson@gmail.com> 
 
 	* Banter/NotificationManager.cs: removed VideoDown event
